Plugin Name: Membership 2
Author: Philipp Stracker, Fabio Jun, Rheinard Khorf

Change Log:
----------------------------------------------------------------------

1.0.2.2
----------------------------------------------------------------------
- Improve the shortcode column in the admin membership list
- Improve layout of the [ms-note] messages on front-end
- Fix wrong registration workflow that showed membership list instead of payment form
- Fix the Reset Password workflow
- Fix issue in WP 4.3 that sent password-reset emails during user registration
- Fix problem with user registration when the password fields were hidden via Profile Fields Add-on
- Fix ms-protect-content shortcode: Resolve shortcodes in protected content also for admin users
- Fix bug in setup-wizard that sometimes did not finish after creating the first membership
- Fix issue where Manual Payment displayed price multiple times (e.g. when using Yoast SEO)
- Fix an issue with Internet Explorer privacy settings that caused IE to reject M2 cookies

1.0.2.1
----------------------------------------------------------------------
- Fix parse error during user registration in older PHP versions
 
1.0.2.0
----------------------------------------------------------------------
- Add new filter in Members list to filter members by subscription status (active/expired)
- Add new Variable for Automated Emails: Membership Description
- Add API functions: ms_api, get_membership_id, add_subscription (see API Docs for details)
- Add a "Retry" function to Transaction logs to re-process a single transaction
- Add a "Auto Matching" screen to the billings page to link M1 payments with memberships
- Add notice when unsupported Permalink options are detected
- Add condition to prevent WordPress from updating M2 Pro while WPMUDEV Dashboard is disabled
- Add logging of additional invoice data (checkout-date, IP) and improve payment history dialog