@@ -46,6 +46,14 @@
 		text-align: right;
 	}
 
+	.ms-fright {
+		float: right;
+	}
+
+	.ms-fleft {
+		float: left;
+	}
+
 	.ms-spaced {
 		padding: 5px;
 	}
